# gdtoa-desktop

./: .travis.yml  CMakeLists.txt  README.md  gdtoa-desktop.pc.cmake  gdtoa.pc.cmake  lock.c  lock.cpp  rename-functions.sh  run-tests.sh
gdtoa/: dmisc.c  dtoa.c  g_ddfmt.c  g_ddfmt_p.c  g_dfmt_p.c  gdtoa.h  gdtoaimp.h  gethex.c  misc.c  printf.c0  strtoIQ.c  strtoId.c  strtoIdd.c  strtoIf.c  strtoIg.c  strtoIx.c  strtoIxL.c  strtod.c  strtodI.c  strtodg.c  strtodnrp.c  strtof.c  strtopQ.c  strtopd.c  strtopdd.c  strtopf.c  strtopx.c  strtopxL.c  strtorQ.c  strtordd.c  strtorf.c  strtorx.c  strtorxL.c  xsum0.out
gdtoa/test/: Q.ou0  Q.ou1  Qtest.c  d.out  dI.out  dIsi.out  dItest.c  dd.out  ddsi.out  ddtest.c  dt.c  dtest.c  dtst.out  f.out  ftest.c  testnos  x.ou0  x.ou1  xL.ou0  xL.ou1  xLtest.c  xsum0.out  xtest.c
gdtoa/test/obad/: xL.out
